phase-1(added favicon)
ay favicon added

--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="blog-post.css">
     <link rel="stylesheet" href="fonts.css">
     <title>Understanding AI: Types, Applications, and Challenges</title>
+    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
     <header>
