--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="contact_me.css">
     <link rel="stylesheet" href="fonts.css">
     <title>Zubair Ahmed | Contact Me</title>
+    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
     <header>
