--- a/addBlog.html
+++ b/addBlog.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="addBlog.css">
     <link rel="stylesheet" href="fonts.css">
     <title>Zubair Ahmed | Add Blog</title>
+    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
     <header>
