--- a/blog-post-3.html
+++ b/blog-post-3.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="blog-post.css">
     <link rel="stylesheet" href="fonts.css">
     <title>Ethical Considerations in AI Development and Deployment</title>
+    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
     <header>
