--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="homepage.css">
     <link rel="stylesheet" href="header_footer_styles.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
     <title>Zubair Ahmed | Home</title>
 </head>
 
