phase1-circular-favicon
made favicon circular - v1

--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="blog-post.css">
     <link rel="stylesheet" href="fonts.css">
     <title>The Rise of Natural Language Processing: Applications and Limitations</title>
-    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
+    <link rel="icon" href="images/ay-logo.png" type="image/x-icon">
 </head>
 <body>
     <header>
