--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="header_footer_styles.css">
     <link rel="stylesheet" href="portfolio.css">
     <link rel="stylesheet" href="fonts.css">
-    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
+    <link rel="icon" href="images/ay-logo.png" type="image/x-icon">
     <title>Zubair Ahmed | Portfolio</title>
 </head>
 <body>
