--- a/addBlog.html
+++ b/addBlog.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="header_footer_styles.css">
-    <link rel="stylesheet" href="addBlog.css">
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/header_footer_styles.css">
+    <link rel="stylesheet" href="css/addBlog.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <title>Zubair Ahmed | Add Blog</title>
     <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
 </head>
