--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="header_footer_styles.css">
-    <link rel="stylesheet" href="blog-post.css">
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/header_footer_styles.css">
+    <link rel="stylesheet" href="css/blog-post.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <title>The Rise of Natural Language Processing: Applications and Limitations</title>
-    <link rel="icon" href="images/ay-logo.png" type="image/x-icon">
+    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
     <header>
