--- a/blog.html
+++ b/blog.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="header_footer_styles.css">
-    <link rel="stylesheet" href="blog.css">
-    <link rel="stylesheet" href="fonts.css">
-    <link rel="icon" href="images/ay-logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/header_footer_styles.css">
+    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
     <title>Zubair Ahmed | Blog</title>
 </head>
 <body>
