--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="homepage.css">
-    <link rel="stylesheet" href="header_footer_styles.css">
-    <link rel="stylesheet" href="fonts.css">
-    <link rel="icon" href="images/ay-logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="css/header_footer_styles.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="icon" href="images/ay-logo-removebg-preview.png" type="image/x-icon">
     <title>Zubair Ahmed | Home</title>
 </head>
 
