--- a/blog.html
+++ b/blog.html
@@ -37,24 +37,26 @@
                 <h1>Blog</h1>
             </hgroup>
 
-            <article>
-                <p>Lorem ipsum dolor sit amet, 
-                    consectetur adipisicing elit, 
-                    sed do eiusmod tempor incidt 
-                    ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis 
-                    nostrud exercitation ullamco 
-                    laboris nisi ut aliquip ex ea 
-                    commodo.</p>
-            </article>
+            <div>
+                <article>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit, 
+                        sed do eiusmod tempor incidt 
+                        ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis 
+                        nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea 
+                        commodo.</p>
+                </article>
 
-            <aside>
-                <ul>
-                    <li>Lorem ipsum dolor</li>
-                    <li>Lorem ipsum dolor</li>
-                    <li>Lorem ipsum dolor</li>
-                </ul>
-            </aside>
+                <aside>
+                    <ul>
+                        <li>Lorem ipsum dolor</li>
+                        <li>Lorem ipsum dolor</li>
+                        <li>Lorem ipsum dolor</li>
+                    </ul>
+                </aside>
+            </div>
         </section>
 
         <section class="blogBody">
